force-app/main/default/objects/SVMXC__SM_Tier_Usage__c/SVMXC__SM_Tier_Usage__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Consumption of tiered pricing at work detail level</description>
    <label>Tier Usage</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tier Usages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>