force-app/main/default/objects/SVMXC__SM_Tier_Usage__c/fields/SVMXC__SM_Committed_By__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Committed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that confirmed the tiered price.</description>
    <inlineHelpText>User that confirmed the tiered price.</inlineHelpText>
    <label>Committed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tier_Usages1</relationshipName>
    <type>Lookup</type>
</CustomField>