force-app/main/default/objects/SVMXC__SM_Tier_Usage__c/fields/SVMXC__SM_Is_Committed__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Is_Committed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if the Tier Usage record is confirmed.</description>
    <inlineHelpText>Flag indicates if the Tier Usage record is confirmed.</inlineHelpText>
    <label>Is Committed</label>
    <type>Checkbox</type>
</CustomField>