force-app/main/default/objects/SVMXC__SM_Tier_Usage__c/fields/SVMXC__SM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Quantity__c</fullName>
    <description>Number of units consumed from the given Tier.</description>
    <inlineHelpText>Number of units consumed from the given Tier.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>